feat(platform): real Forge 1.7.10 integration with live server support
Convert the 1.7.10 branch from a plain Java-library stub into a real
Minecraft Forge 1.7.10 mod that builds, loads, and runs on a dedicated
server.

Build tooling:
- Replace plain java-library build with RetroFuturaGradle 1.4.9
- Downgrade Gradle wrapper to 8.8 (RFG 1.4.9 compatibility)
- Add CleanroomMC and GTNH plugin repositories
- Add Foojay toolchain resolver for automatic Java 8 provisioning
- Use Jabel 0.4.2 to compile Java 17 records down to Java 8 bytecode
- Add @Desugar annotations to all record types
- Force RFG patched MC tasks to use Java 8 toolchain

Forge runtime:
- Add HeapHammerForge1710 @Mod entrypoint with FMLServerStartingEvent,
  FMLServerStartedEvent, and ServerTickEvent wiring
- Wire existing CommandHeapHammer1710 via ICommand adapter
- Add mcmod.info descriptor with version filtering
- Bump ForgePlatformAdapter1710 version from 1.0.0 to 1.0.1
- Bump gradle.properties mod_version from 1.0.0 to 1.0.1

Java 8 compatibility:
- Replace List.of(), Map.of(), Set.of() with Collections equivalents
- Replace List.copyOf(), Set.copyOf() with unmodifiable collection copies
- Replace String.isBlank() with trim().isEmpty()
- Replace Stream.toList() with Collectors.toList()
- Replace Optional.isEmpty() with !isPresent()
- Replace Files.writeString/readString with Files.write/readAllBytes
- Replace CompletableFuture.failedFuture with manual exceptional completion
- Exclude JfrTrigger (jdk.jfr unavailable on Java 8)

Verification:
- Live Forge 1.7.10 dedicated server test: 8/8 commands PASS
- Zero crashes, zero exceptions, clean ticket lifecycle
- Mod successfully loaded by Forge 1.7.10 (4 mods identified)

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>