@@ -1,5 +1,10 @@
 package com.dwurdy.heaphammer.detection;
 
+import java.util.HashSet;
+
+
+import com.github.bsideup.jabel.Desugar;
+
 import java.util.Collections;
 import java.util.Objects;
 import java.util.Set;
@@ -7,6 +12,7 @@ import java.util.Set;
 /**
  * Result of validating world cleanup following an experiment cycle (BR-005).
  */
+@Desugar
 public record CleanupResult(
         CleanupStatus status,
         int remainingHeapHammerTickets,
@@ -23,7 +29,7 @@ public record CleanupResult(
     public CleanupResult {
         Objects.requireNonNull(status, "status must not be null");
         Objects.requireNonNull(details, "details must not be null");
-        holdoutChunkKeys = (holdoutChunkKeys == null) ? Collections.emptySet() : Collections.unmodifiableSet(Set.copyOf(holdoutChunkKeys));
+        holdoutChunkKeys = (holdoutChunkKeys == null) ? Collections.emptySet() : Collections.unmodifiableSet(Collections.unmodifiableSet(new HashSet<>(holdoutChunkKeys)));
     }
 
     public boolean isClean() {
@@ -31,7 +37,7 @@ public record CleanupResult(
     }
 
     public static CleanupResult clean(int totalLoadedChunks) {
-        return new CleanupResult(CleanupStatus.CLEAN, 0, totalLoadedChunks, Set.of(), "Cleanup verified: 0 tickets remaining");
+        return new CleanupResult(CleanupStatus.CLEAN, 0, totalLoadedChunks, Collections.emptySet(), "Cleanup verified: 0 tickets remaining");
     }
 
     public static CleanupResult failed(int remainingTickets, Set<Long> holdoutKeys, int totalLoadedChunks, String details) {
@@ -39,6 +45,6 @@ public record CleanupResult(
     }
 
     public static CleanupResult foreignHold(int totalLoadedChunks, String details) {
-        return new CleanupResult(CleanupStatus.FOREIGN_HOLD, 0, totalLoadedChunks, Set.of(), details);
+        return new CleanupResult(CleanupStatus.FOREIGN_HOLD, 0, totalLoadedChunks, Collections.emptySet(), details);
     }
 }
